First commited as before_77852_rev2